Ajout section contribution

--- a/documents/Rapport/annexe_cas.tex
+++ b/documents/Rapport/annexe_cas.tex
@@ -1,8 +1,6 @@
-\chapter{Annexe : Exemples de cas}
+\chapter{Exemples de cas}
+\label{exemplescas}
 %\addcontentsline{toc}{chapter}{Annexe 2 : exemples de cas}
-
-%recommencer la numérotation des section à "1"
-\setcounter{section}{0}
 
 Cette annexe regroupes tous les cas utilisés pour les divers essais de cas particuliers avec l'état initial et l'état final pour chacun. Ils considèrent tous le programme final du stage.
 
