--- a/documents/Rapport/annexe_workflows.tex
+++ b/documents/Rapport/annexe_workflows.tex
@@ -1,13 +1,5 @@
-\chapter{Annexe : workflows}
-%\addcontentsline{toc}{chapter}{Annexe 1 : workflow}
-
-%changer le format des sections, subsections pour apparaittre sans le num de chapitre
-\makeatletter
-\renewcommand{\thesection}{\@arabic\c@section}
-\makeatother
-
-%recommencer la numérotation des section à "1"
-\setcounter{section}{0}
+\chapter{Workflows}
+\label{workflows}
 
 Cette annexe présente le workflow du programme final.
 
