--- a/documents/Rapport/annexes.tex
+++ b/documents/Rapport/annexes.tex
@@ -6,8 +6,12 @@
 %Rajouter la ligne "Annexes" dans le sommaire
 \addcontentsline{toc}{part}{Annexes}
 
-\input{./annexe_workflows.tex}
+\begin{appendix}
+
+%\input{./annexe_workflows.tex}
 
 \input{./annexe_cas.tex}
 
 \input{./annexe_inputoutput.tex}
+
+\end{appendix}
