--- a/documents/Rapport/bibliographie.bib
+++ b/documents/Rapport/bibliographie.bib
@@ -93,3 +93,10 @@
 	howpublished = {Disponible sur : \url{https://www.graphviz.org/}},
 	note = {Consulté de avril à août 2018 }
 }
+
+@misc{conexp,
+	title={ConExp application},
+	author = {Dr. Serhiy Yevtushenko, Serhiy AND Kaiser, Tim AND Tane, Julian AND ObjedkovEllson, Sergei},
+	howpublished = {Disponible sur : \url{http://conexp.sourceforge.net/}},
+	note = {Consulté de avril à août 2018 }
+}
