--- a/documents/Rapport/annexe_inputoutput.tex
+++ b/documents/Rapport/annexe_inputoutput.tex
@@ -1,13 +1,5 @@
-\chapter{Annexe : Fichiers d'entré et de sortie}
-%\addcontentsline{toc}{chapter}{Annexe 3 : fichiers d'entré et de sortie}
-
-%changer le format des sections, subsections pour apparaittre sans le num de chapitre
-\makeatletter
-\renewcommand{\thesection}{\@arabic\c@section}
-\makeatother
-
-%recommencer la numérotation des section à "1"
-\setcounter{section}{0}
+\chapter{Fichiers d'entré et de sortie}
+\label{inputoutput}
 
 Cette annexe présente le fichier texte d'entré contenant le contexte de base et le fichier texte de sortie pour l'utilisation du résultat sous ConExp.
 
